--- a/src/examples/article/article.html
+++ b/src/examples/article/article.html
@@ -1,138 +1,157 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
-  <head>
-    <title>RespVis - News Article Context Example</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="../../respvis.css" />
-    <link rel="stylesheet" href="./styles.css" />
-    <link rel="stylesheet" href="../charts/electric-power-comsumption/electric-power-consumption.css" />
-    <link rel="stylesheet" href="../charts/market-shares/market-shares.css" />
-    <link rel="stylesheet" href="./sold-cars-germany/sold-cars-germany.css" />
-  </head>
-  <body>
-    <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit!</h1>
-    <div class="grid-article">
-      <div class="article" id="article-1">
-      <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit!</h2>
-      <div id="market-shares-chart" class="chart-container"></div>
-      <p>
-        Vivamus iaculis augue elit, sit amet consectetur dui condimentum a. Vivamus arcu diam, commodo
-        id dictum et, fermentum eget tellus. Etiam mattis purus vitae volutpat luctus. Cras et nisi
-        risus. Suspendisse potenti. Donec ut rutrum magna. Aenean a ligula in erat sodales posuere at
-        sed quam. Etiam feugiat faucibus est id laoreet. Aliquam egestas euismod lectus, in finibus
-        sem pulvinar fringilla. Vestibulum justo lacus, gravida sed dolor sit amet, lacinia varius
-        augue. Aenean sollicitudin eleifend enim, sagittis viverra eros fringilla eget.
-      </p>
-    </div>
-      <div class="article" id="article-2">
-        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit!</h3>
-        <p>
-          Etiam rhoncus interdum urna, vel tincidunt justo consequat sit amet. Quisque pellentesque
-          sagittis feugiat. Morbi vel ultricies ligula. Sed faucibus enim dui, in dictum lectus gravida
-          ac. Aliquam commodo metus sed dui malesuada, nec commodo leo rutrum. Integer ut nulla blandit
-          libero finibus dignissim suscipit pretium elit. Morbi convallis ex eget leo semper volutpat.
-          Nulla feugiat dapibus porttitor. Praesent nec sodales urna. Nam lacinia odio sit amet arcu
-          mattis, ac imperdiet nibh accumsan. Phasellus congue congue arcu nec vulputate. In non commodo
-          felis, at tristique ante. Cras volutpat ante ex, in venenatis nunc blandit ut.
-        </p>
-        <p>
-          Etiam rhoncus interdum urna, vel tincidunt justo consequat sit amet. Quisque pellentesque
-          sagittis feugiat. Morbi vel ultricies ligula. Sed faucibus enim dui, in dictum lectus gravida
-          ac. Aliquam commodo metus sed dui malesuada, nec commodo leo rutrum. Integer ut nulla blandit
-          libero finibus dignissim suscipit pretium elit. Morbi convallis ex eget leo semper volutpat.
-          Nulla feugiat dapibus porttitor. Praesent nec sodales urna. Nam lacinia odio sit amet arcu
-          mattis, ac imperdiet nibh accumsan. Phasellus congue congue arcu nec vulputate. In non commodo
-          felis, at tristique ante. Cras volutpat ante ex, in venenatis nunc blandit ut.
-        </p>
-        <p>
-          Etiam rhoncus interdum urna, vel tincidunt justo consequat sit amet. Quisque pellentesque
-          sagittis feugiat. Morbi vel ultricies ligula. Sed faucibus enim dui, in dictum lectus gravida
-          ac. Aliquam commodo metus sed dui malesuada, nec commodo leo rutrum.
-        </p>
-      </div>
-      <div class="article" id="article-3">
-        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit!</h3>
-        <p>
-          Vivamus iaculis augue elit, sit amet consectetur dui condimentum a. Vivamus arcu diam, commodo
-          id dictum et, fermentum eget tellus. Etiam mattis purus vitae volutpat luctus. Cras et nisi
-          risus. Suspendisse potenti. Donec ut rutrum magna. Aenean a ligula in erat sodales posuere at
-          sed quam. Etiam feugiat faucibus est id laoreet. Aliquam egestas euismod lectus, in finibus
-          sem pulvinar fringilla. Vestibulum justo lacus, gravida sed dolor sit amet, lacinia varius
-          augue. Aenean sollicitudin eleifend enim, sagittis viverra eros fringilla eget.
-        </p>
-        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit!</h3>
-        <div id="electric-power-consumption" class="chart-container"></div>
-      </div>
-      <div class="article" id="article-4">
-        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit!</h3>
-        <p>
-          Etiam rhoncus interdum urna, vel tincidunt justo consequat sit amet. Quisque pellentesque
-          sagittis feugiat. Morbi vel ultricies ligula. Sed faucibus enim dui, in dictum lectus gravida
-          ac. Aliquam commodo metus sed dui malesuada, nec commodo leo rutrum. Integer ut nulla blandit
-          libero finibus dignissim suscipit pretium elit. Morbi convallis ex eget leo semper volutpat.
-          Nulla feugiat dapibus porttitor. Praesent nec sodales urna. Nam lacinia odio sit amet arcu
-          mattis, ac imperdiet nibh accumsan. Phasellus congue congue arcu nec vulputate. In non commodo
-          felis, at tristique ante. Cras volutpat ante ex, in venenatis nunc blandit ut.
-        </p>
-        <p>
-          Etiam rhoncus interdum urna, vel tincidunt justo consequat sit amet. Quisque pellentesque
-          sagittis feugiat. Morbi vel ultricies ligula. Sed faucibus enim dui, in dictum lectus gravida
-          ac. Aliquam commodo metus sed dui malesuada, nec commodo leo rutrum. Integer ut nulla blandit
-          libero finibus dignissim suscipit pretium elit. Morbi convallis ex eget leo semper volutpat.
-          Nulla feugiat dapibus porttitor. Praesent nec sodales urna. Nam lacinia odio sit amet arcu
-          mattis, ac imperdiet nibh accumsan. Phasellus congue congue arcu nec vulputate. In non commodo
-          felis, at tristique ante. Cras volutpat ante ex, in venenatis nunc blandit ut.
-        </p>
-        <p>
-          Etiam rhoncus interdum urna, vel tincidunt justo consequat sit amet. Quisque pellentesque
-          sagittis feugiat. Morbi vel ultricies ligula. Sed faucibus enim dui, in dictum lectus gravida
-          ac. Aliquam commodo metus sed dui malesuada, nec commodo leo rutrum.
-        </p>
-      </div>
-      <div class="article" id="article-5">
-        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit!</h3>
-        <div id="sold-cars-germany" class="chart-container"></div>
-        <p>
-          Etiam rhoncus interdum urna, vel tincidunt justo consequat sit amet. Quisque pellentesque
-          sagittis feugiat. Morbi vel ultricies ligula. Sed faucibus enim dui, in dictum lectus gravida
-          ac. Aliquam commodo metus sed dui malesuada, nec commodo leo rutrum. Integer ut nulla blandit
-          libero finibus dignissim suscipit pretium elit. Morbi convallis ex eget leo semper volutpat.
-          Nulla feugiat dapibus porttitor. Praesent nec sodales urna. Nam lacinia odio sit amet arcu
-          mattis, ac imperdiet nibh accumsan. Phasellus congue congue arcu nec vulputate. In non commodo
-          felis, at tristique ante. Cras volutpat ante ex, in venenatis nunc blandit ut.
-        </p>
-      </div>
-      <div class="article" id="article-6">
-        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit!</h3>
-        <p>
-          Etiam rhoncus interdum urna, vel tincidunt justo consequat sit amet. Quisque pellentesque
-          sagittis feugiat. Morbi vel ultricies ligula. Sed faucibus enim dui, in dictum lectus gravida
-          ac. Aliquam commodo metus sed dui malesuada, nec commodo leo rutrum. Integer ut nulla blandit
-          libero finibus dignissim suscipit pretium elit. Morbi convallis ex eget leo semper volutpat.
-          Nulla feugiat dapibus porttitor. Praesent nec sodales urna. Nam lacinia odio sit amet arcu
-          mattis, ac imperdiet nibh accumsan. Phasellus congue congue arcu nec vulputate. In non commodo
-          felis, at tristique ante. Cras volutpat ante ex, in venenatis nunc blandit ut.
-        </p>
-        <p>
-          Etiam rhoncus interdum urna, vel tincidunt justo consequat sit amet. Quisque pellentesque
-          sagittis feugiat. Morbi vel ultricies ligula. Sed faucibus enim dui, in dictum lectus gravida
-          ac. Aliquam commodo metus sed dui malesuada, nec commodo leo rutrum. Integer ut nulla blandit
-          libero finibus dignissim suscipit pretium elit. Morbi convallis ex eget leo semper volutpat.
-          Nulla feugiat dapibus porttitor. Praesent nec sodales urna. Nam lacinia odio sit amet arcu
-          mattis, ac imperdiet nibh accumsan. Phasellus congue congue arcu nec vulputate. In non commodo
-          felis, at tristique ante. Cras volutpat ante ex, in venenatis nunc blandit ut.
-        </p>
-        <p>
-          Etiam rhoncus interdum urna, vel tincidunt justo consequat sit amet. Quisque pellentesque
-          sagittis feugiat. Morbi vel ultricies ligula. Sed faucibus enim dui, in dictum lectus gravida
-          ac. Aliquam commodo metus sed dui malesuada, nec commodo leo rutrum.
-        </p>
-      </div>
-    </div>
+<head>
+  <title>RespVis - News Article Context Example</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8" />
+  <link rel="stylesheet" href="../../respvis.css" />
+  <link rel="stylesheet" href="./styles.css" />
+  <link rel="stylesheet" href="../charts/electric-power-comsumption/electric-power-consumption.css" />
+  <link rel="stylesheet" href="../charts/market-shares/market-shares.css" />
+  <link rel="stylesheet" href="./sold-cars-germany/sold-cars-germany.css" />
+</head>
+<body>
+<h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit!</h1>
+<div class="grid-article">
 
-    <script type="module" src="../charts/market-shares/market-shares-chart.js"></script>
-    <script type="module" src="../charts/electric-power-comsumption/electric-power-consumption.js"></script>
-    <script type="module" src="sold-cars-germany/sold-cars-germany-chart.js"></script>
-  </body>
+  <div class="article" id="article-1">
+  <h2>Aliquet nibh praesent tristique magna</h2>
+  <div id="market-shares-chart" class="chart-container"></div>
+  <p>
+   Lectus nulla at volutpat diam. Mi proin sed libero enim sed. Morbi
+   tristique senectus et netus et malesuada fames ac. Tempus iaculis
+   urna id volutpat lacus laoreet non curabitur gravida. Diam quis
+   enim lobortis scelerisque fermentum dui. Aenean euismod elementum
+   nisi quis eleifend quam adipiscing vitae. Urna molestie at
+   elementum eu facilisis. Diam maecenas sed enim ut sem. Faucibus in
+   ornare quam viverra orci. Felis eget nunc lobortis mattis aliquam
+   faucibus purus in.
+  </p>
+  </div>
+
+  <div class="article" id="article-2">
+  <h2>Consectetur adipiscing elit!</h2>
+  <p>
+    Eu facilisis sed odio morbi quis commodo. Amet mauris commodo
+    quis imperdiet massa tincidunt. Massa id neque aliquam
+    vestibulum morbi blandit cursus risus at. Volutpat blandit
+    aliquam etiam erat velit scelerisque in. In ornare quam viverra
+    orci. Est ante in nibh mauris cursus mattis molestie
+    a. Habitasse platea dictumst quisque sagittis purus sit
+    amet. Amet nisl purus in mollis nunc sed id. Sed nisi lacus sed
+    viverra tellus in. Amet tellus cras adipiscing enim eu turpis
+    egestas. Turpis egestas pretium aenean pharetra. Nibh praesent
+    tristique magna sit. Eget arcu dictum varius duis at consectetur
+    lorem donec. Vulputate enim nulla aliquet porttitor lacus luctus
+    accumsan tortor posuere. Et pharetra pharetra massa massa
+    ultricies mi quis. Eget arcu dictum varius duis. Viverra orci
+    sagittis eu volutpat odio facilisis mauris sit.
+  </p>
+  <p>
+    Scelerisque mauris pellentesque pulvinar pellentesque habitant
+    morbi tristique. Sagittis eu volutpat odio facilisis mauris sit
+    amet massa. Dolor sit amet consectetur adipiscing elit
+    pellentesque. Posuere sollicitudin aliquam ultrices sagittis
+    orci a. Neque aliquam vestibulum morbi blandit cursus. Ultrices
+    gravida dictum fusce ut. Suspendisse ultrices gravida dictum
+    fusce.
+  </p>
+  <p>
+    Donec ac odio tempor orci dapibus ultrices in iaculis
+    nunc. Commodo quis imperdiet massa tincidunt. Dui faucibus in
+    ornare quam viverra orci sagittis eu. Quis auctor elit sed
+    vulputate mi sit amet mauris. Quis lectus nulla at volutpat
+    diam. In fermentum et sollicitudin ac orci phasellus egestas
+    tellus. Arcu dictum varius duis at consectetur lorem donec.
+  </p>
+  </div>
+
+  <div class="article" id="article-3">
+    <h2>Ipsum ut rutrum magna</h2>
+    <p>
+      Vivamus iaculis augue elit, sit amet consectetur dui condimentum
+      a. Vivamus arcu diam, commodo id dictum et, fermentum eget
+      tellus. Etiam mattis purus vitae volutpat luctus. Cras et nisi
+      risus. Suspendisse potenti. Donec ut rutrum magna. Aenean a
+      ligula in erat sodales posuere at sed quam. Etiam feugiat
+      faucibus est id laoreet. Aliquam egestas euismod lectus, in
+      finibus sem pulvinar fringilla. Vestibulum justo lacus, gravida
+      sed dolor sit amet, lacinia varius augue. Aenean sollicitudin
+      eleifend enim, sagittis viverra eros fringilla eget.
+    </p>
+    <div id="electric-power-consumption" class="chart-container"></div>
+  </div>
+
+  <div class="article" id="article-4">
+    <h2>Ultricies mi eget mauris pharetra</h2>
+    <p>
+      Vestibulum lectus mauris ultrices eros in cursus turpis massa
+      tincidunt. Suspendisse faucibus interdum posuere lorem ipsum
+      dolor. Sed risus pretium quam vulputate dignissim
+      suspendisse. At auctor urna nunc id cursus metus aliquam
+      eleifend. Dictum sit amet justo donec enim diam vulputate
+      ut. Felis bibendum ut tristique et egestas. Consequat semper
+      viverra nam libero justo laoreet sit amet cursus. Ut placerat
+      orci nulla pellentesque. Integer vitae justo eget magna
+      fermentum. Commodo nulla facilisi nullam vehicula ipsum a arcu
+      cursus.
+    </p>
+  </div>
+
+  <div class="article" id="article-5">
+    <h2>Posuere ac ut consequat semper. Feugiat in ante metus dictum
+      at tempor commodo ullamcorper a.</h2>
+    <div id="sold-cars-germany" class="chart-container"></div>
+    <p>
+     A iaculis at erat pellentesque adipiscing. Iaculis urna id
+     volutpat lacus laoreet non curabitur gravida arcu. Neque aliquam
+     vestibulum morbi blandit. Morbi tristique senectus et netus et
+     malesuada. Cursus in hac habitasse platea dictumst quisque
+     sagittis purus. Aenean pharetra magna ac placerat vestibulum
+     lectus. Nulla pharetra diam sit amet nisl. Purus gravida quis
+     blandit turpis cursus in hac habitasse. Arcu risus quis varius
+     quam quisque. Semper viverra nam libero justo laoreet sit amet
+     cursus.
+    </p>
+  </div>
+
+  <div class="article" id="article-6">
+    <h2>Nec feugiat nisl pretium fusce id</h2>
+    <p>
+      Etiam rhoncus interdum urna, vel tincidunt justo consequat sit
+      amet. Quisque pellentesque sagittis feugiat. Morbi vel ultricies
+      ligula. Sed faucibus enim dui, in dictum lectus gravida
+      ac. Aliquam commodo metus sed dui malesuada, nec commodo leo
+      rutrum. Integer ut nulla blandit libero finibus dignissim
+      suscipit pretium elit. Morbi convallis ex eget leo semper
+      volutpat.  Nulla feugiat dapibus porttitor. Praesent nec sodales
+      urna. Nam lacinia odio sit amet arcu mattis, ac imperdiet nibh
+      accumsan. Phasellus congue congue arcu nec vulputate. In non
+      commodo felis, at tristique ante. Cras volutpat ante ex, in
+      venenatis nunc blandit ut.
+    </p>
+    <p>
+      Blandit massa enim nec dui nunc mattis enim. Erat imperdiet sed
+      euismod nisi porta. Ullamcorper eget nulla facilisi etiam
+      dignissim diam. Iaculis nunc sed augue lacus viverra vitae
+      congue. Fusce ut placerat orci nulla pellentesque
+      dignissim. Nibh tellus molestie nunc non blandit massa enim nec
+      dui.
+    </p>
+    <p>
+      Posuere urna nec tincidunt praesent semper feugiat nibh
+      sed. Turpis massa tincidunt dui ut ornare. Ut diam quam nulla
+      porttitor massa. Est sit amet facilisis magna. Velit sed
+      ullamcorper morbi tincidunt ornare. Ridiculus mus mauris vitae
+      ultricies leo integer. Nisl suscipit adipiscing bibendum est
+      ultricies integer quis auctor elit. Cras ornare arcu dui
+      vivamus. Amet consectetur adipiscing elit ut.
+    </p>
+  </div>
+</div>
+
+<script type="module" src="../charts/market-shares/market-shares-chart.js"></script>
+<script type="module" src="../charts/electric-power-comsumption/electric-power-consumption.js"></script>
+<script type="module" src="sold-cars-germany/sold-cars-germany-chart.js"></script>
+</body>
 </html>
