--- a/src/examples/stacked-bar-percent.html
+++ b/src/examples/stacked-bar-percent.html
@@ -45,7 +45,7 @@
             xAxis: { title: 'Category' },
             yAxis: { title: 'Percent' },
             legend: { title: 'Subcategories', reverse: true },
-            title: "Illustration of a Stacked Bar Chart"
+            title: "Stacked Bar Chart"
           })
         )
         .call(chartWindowBarStackedRender)
