Add Show all ticks at screen width >80rem in line chart

--- a/src/examples/line.html
+++ b/src/examples/line.html
@@ -62,10 +62,10 @@
     }
   }
 
-  @media (min-width: 60rem) {
-    .ticks .tick {
-      display: block;
-    }
+  @media (min-width: 80rem) {
+      .axis .ticks .tick {
+          display: block;
+      }
   }
 </style>
 </head>
