--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 <h2>Line Charts</h2>
 <ul>
   <li><a href="./examples/line.html">Line Chart</a></li>
-  <li><a href="./examples/line-multi.html">Multi-Line Chart</a></li>
+  <li><a href="examples/line-multi/line-multi.html">Multi-Line Chart</a></li>
 </ul>
 <h2>Scatter Plots</h2>
 <ul>
