Refactor + Reformat Line Chart

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 <h1>RespVis Examples</h1>
 <h2>Line Charts</h2>
 <ul>
-  <li><a href="./examples/line.html">Line Chart</a></li>
+  <li><a href="examples/line/line.html">Line Chart</a></li>
   <li><a href="examples/line-multi/line-multi.html">Multi-Line Chart</a></li>
 </ul>
 <h2>Scatter Plots</h2>
