Refactor + Reformat Grouped Bar Chart

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
 </ul>
 <h2>Bar Charts</h2>
 <ul>
-  <li><a href="./examples/grouped-bar.html">Grouped Bar Chart</a></li>
+  <li><a href="examples/grouped-bar/grouped-bar.html">Grouped Bar Chart</a></li>
   <li><a href="./examples/stacked-bar-percent.html">Percent Stacked Bar Chart</a></li>
   <li><a href="./examples/stacked-bar.html">Stacked Bar Chart</a></li>
 </ul>
