--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
 <ul>
   <li><a href="examples/grouped-bar/grouped-bar.html">Grouped Bar Chart</a></li>
   <li><a href="./examples/stacked-bar-percent.html">Percent Stacked Bar Chart</a></li>
-  <li><a href="./examples/stacked-bar.html">Stacked Bar Chart</a></li>
+  <li><a href="examples/stacked-bar/stacked-bar.html">Stacked Bar Chart</a></li>
 </ul>
 <h2>Other Charts</h2>
 <ul>
