Refactor + Reformat Parcoord Chart

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
 <h2>Other Charts</h2>
 <ul>
   <li><a href="./examples/article/article.html">News Article</a></li>
-  <li><a href="./examples/parcoord.html">Parallel Coordinates Chart</a></li>
+  <li><a href="examples/parcoord/parcoord.html">Parallel Coordinates Chart</a></li>
 </ul>
 </body>
 </html>
