--- a/src/examples/fullsize-examples/line/line.html
+++ b/src/examples/fullsize-examples/line/line.html
@@ -4,18 +4,18 @@
   <title>RespVis - Line Chart</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta charset="UTF-8"/>
-  <link rel="stylesheet" href="../../respvis.css"/>
-  <link rel="stylesheet" href="./line.css"/>
+  <link rel="stylesheet" href="../../../respvis.css"/>
+  <link rel="stylesheet" href="line.css"/>
 </head>
 
 <body>
 <h1>Line Chart</h1>
 <div id="chart"></div>
 <script type="module">
-  import {chartWindowLineData, chartWindowLineRender} from '../libs/respvis/respvis.js';
+  import {chartWindowLineData, chartWindowLineRender} from '../../libs/respvis/respvis.js';
 
-  import {years, averageOpens} from '../data/google.js';
-  import * as d3 from '../libs/d3-7.6.0/d3.js'
+  import {years, averageOpens} from '../../data/google.js';
+  import * as d3 from '../../libs/d3-7.6.0/d3.js'
   import {chooseResponsiveData} from "./chooseResponsiveData.js";
 
   const calcData = () => {
