--- a/src/examples/fullsize-examples/scatter/scatter.html
+++ b/src/examples/fullsize-examples/scatter/scatter.html
@@ -4,16 +4,16 @@
   <title>RespVis - Point Chart</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta charset="UTF-8"/>
-  <link rel="stylesheet" href="../../respvis.css"/>
-  <link rel="stylesheet" href="./scatter.css"/>
+  <link rel="stylesheet" href="../../../respvis.css"/>
+  <link rel="stylesheet" href="scatter.css"/>
 </head>
 <body>
 <h1>Scatter Plot</h1>
 <div id="chart"></div>
 <script type="module">
-  import {ScatterPlot} from '../libs/respvis/respvis.js';
-  import * as d3 from '../libs/d3-7.6.0/d3.js'
-  import {getTopMakesData, carData} from "../data/sold-cars-germany/sold-cars-germany.js";
+  import {ScatterPlot} from '../../libs/respvis/respvis.js';
+  import * as d3 from '../../libs/d3-7.6.0/d3.js'
+  import {getTopMakesData, carData} from "../../data/sold-cars-germany/sold-cars-germany.js";
   import {chooseResponsiveData} from "./chooseResponsiveData.js";
 
   const {topMakesNames, mileages, horsePower, prices} = getTopMakesData(5)
