--- a/src/index.html
+++ b/src/index.html
@@ -13,24 +13,24 @@
 <h1>RespVis Examples</h1>
 <h2>Line Charts</h2>
 <ul>
-  <li><a href="examples/line/line.html">Line Chart</a></li>
-  <li><a href="examples/line-multi/line-multi.html">Multi-Line Chart</a></li>
+  <li><a href="examples/fullsize-examples/line/line.html">Line Chart</a></li>
+  <li><a href="examples/fullsize-examples/line-multi/line-multi.html">Multi-Line Chart</a></li>
 </ul>
 <h2>Scatter Plots</h2>
 <ul>
-  <li><a href="./examples/scatter/scatter.html">Scatter Plot</a></li>
-  <li><a href="examples/scatter-color-scale/scatter-color-scale.html">Scatter Plot Colored</a></li>
+  <li><a href="examples/fullsize-examples/scatter/scatter.html">Scatter Plot</a></li>
+  <li><a href="examples/fullsize-examples/scatter-color-scale/scatter-color-scale.html">Scatter Plot Colored</a></li>
 </ul>
 <h2>Bar Charts</h2>
 <ul>
-  <li><a href="examples/grouped-bar/grouped-bar.html">Grouped Bar Chart</a></li>
-  <li><a href="./examples/stacked-bar-percent.html">Percent Stacked Bar Chart</a></li>
-  <li><a href="examples/stacked-bar/stacked-bar.html">Stacked Bar Chart</a></li>
+  <li><a href="examples/fullsize-examples/grouped-bar/grouped-bar.html">Grouped Bar Chart</a></li>
+  <li><a href="examples/fullsize-examples/stacked-bar-percent/stacked-bar-percent.html">Percent Stacked Bar Chart</a></li>
+  <li><a href="examples/fullsize-examples/stacked-bar/stacked-bar.html">Stacked Bar Chart</a></li>
 </ul>
 <h2>Other Charts</h2>
 <ul>
   <li><a href="./examples/article/article.html">News Article</a></li>
-  <li><a href="examples/parcoord/parcoord.html">Parallel Coordinates Chart</a></li>
+  <li><a href="examples/fullsize-examples/parcoord/parcoord.html">Parallel Coordinates Chart</a></li>
 </ul>
 </body>
 </html>
